fixed footer aligning

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2854,7 +2854,7 @@ footer {
   padding: 53px 0 0 55px;
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer__list > li {
   margin-top: 40px;
@@ -2866,6 +2866,7 @@ footer {
   }
 }
 .footer__list > li > h3 {
+  min-height: 22px;
   padding: 0;
   margin: 0 0 16px 0;
   font-size: 16px;
